== September 9, 2010

* Feature:
  * Redirect to after_sign_out_path_for(resource_name) when user is visiting /:resource_name/invitation/accept without invitation_token or with an invalid invitation_token.

* Change:
  * After inviting a new resource, the inviter is redirected to after_update_path_for(resource_name) (he was redirected to after_sign_in_path_for(resource_name) before).

== 0.6.7 - September 7, 2010

* Bugfix:
  * Fixed a bug that prevented resource attributes from being modified without entering a password, reported by {Thibaud Guillaume-Gentil}[http://github.com/thibaudgg].
  
== 0.6.6 - September 6, 2010

* Bugfix:
  * Fixed a bug that was disabling password validation (because of password_required? was not properly overridden), reported by {Thibaud Guillaume-Gentil}[http://github.com/thibaudgg]

== September 3, 2010

* Features:
  * Added generators: devise_invitable, devise_invitable:install and devise_invitable:views (thanks to robotblake[http://github.com/robotblake] for this one)

== August 30, 2010

* Changes:
  * Bumped version of Rails to 3.0.0
  * Bumped version of Devise to 1.1.2

== August 24, 2010

* Changes:
  * Bumped version of Rails to RC2
  * Loosely version dependencies

== August 09, 2010

* Changes:
  * Renamed back the gem to devise_invitable
  * Removed rails3 branch since it's was only for Rails 3.0.0beta4/Devise 1.1.rc2,
    now use master branch for the most up-to-date compatible version of this module.

== 0.6.5 (August 07, 2010)

* Bugfix:
  * Fix issue #1: Prevent invitation_token from being cleared when the password entered on invitation acceptation is invalid resulting in a "missing invitation_token" error.

== 0.6.4.1 (July 29, 2010)

* Bugfix:
  * Don't freeze the VERSION string (Ruby 1.9.x "bug": http://redmine.ruby-lang.org/issues/show/1552)

== 0.6.4 (July 27, 2010)

* Changes:
  * Forget this 0.6.3 mess

== 0.6.3 (July 27, 2010)

* Changes:

  * Renamed the gem rymai-devise_invitable